Hopefully fixed pre, code not showing scrollbars.

--- a/css/fallrisk.github.io.css
+++ b/css/fallrisk.github.io.css
@@ -77,7 +77,8 @@
     padding: 5px;
   }
 
-  figure {
+  pre,
+  code {
     overflow-x: scroll;
     overflow-y: visible;
     padding: 10px 0 0 0;
